@@ -7,7 +7,7 @@
  * Author:				OceanWP
  * Author URI:			https://oceanwp.org/
  * Requires at least:	5.3
- * Tested up to:		5.7
+ * Tested up to:		5.7.1
  *
  * Text Domain: ocean-extra
  * Domain Path: /languages
