@@ -1,8 +1,9 @@
 == Changelog ==
 
 = 1.7.5 =
-- Added: filter 'oe_icon_picker_image_mime_types_svg' to handle svg types.
 - Added: New demos
+- Fixed: Demos images missing on the setup wizard
+- Added: filter 'oe_icon_picker_image_mime_types_svg' to handle svg types.
 
 = 1.7.4 =
 - Updated: Freemius SDK version.
